--- a/rules.html
+++ b/rules.html
@@ -90,7 +90,7 @@
                     <li><b><h5> <u>Rules and Regulations: </u></h5></b></li>
                     <li> The teams need to prepare a layout and detailed idea regarding the chem shoot.
                     </li>
-                    <li>The details must be submitted beforehand to the organizers before 10 days of the event.
+                    <li><b><u>The details must be submitted beforehand to the organizers before 10 days of the event on the E-mail address <a href="mailto:igitquimica@gmail.com">igitquimica@gmail.com</a> </u></b>
                     </li>
                     <li>
                         Links related to aqua rocket are available at the website and they can refer it for
