--- a/rules.html
+++ b/rules.html
@@ -180,7 +180,8 @@
                     <li>
                         The car needs to cover a certain distance with a safe speed.
                     <li>
-                        The teams need to provide a detailed idea before performing their car’s performance.
+                       <b><u> The teams need to provide a detailed idea before performing their car’s performance to the organisers on the E-mail address 
+                         <a href="mailto:igitquimica@gmail.com">igitquimica@gmail.com</a></u></b>
                     </li>
 
                     </li>
