--- a/rules.html
+++ b/rules.html
@@ -49,6 +49,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sponsor.html"> Sponsor</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html"> Contact</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -90,7 +93,7 @@
                     <li><b><h5> <u>Rules and Regulations: </u></h5></b></li>
                     <li> The teams need to prepare a layout and detailed idea regarding the chem shoot.
                     </li>
-                    <li><b><u>The details must be submitted beforehand to the organizers before 10 days of the event on the E-mail address <a href="mailto:igitquimica@gmail.com">igitquimica@gmail.com</a> </u></b>
+                    <li>The details must be submitted beforehand to the organizers before 10 days of the event.
                     </li>
                     <li>
                         Links related to aqua rocket are available at the website and they can refer it for
@@ -180,8 +183,7 @@
                     <li>
                         The car needs to cover a certain distance with a safe speed.
                     <li>
-                       <b><u> The teams need to provide a detailed idea before performing their car’s performance to the organisers on the E-mail address 
-                         <a href="mailto:igitquimica@gmail.com">igitquimica@gmail.com</a></u></b>
+                        The teams need to provide a detailed idea before performing their car’s performance.
                     </li>
 
                     </li>
