--- a/cultabout.html
+++ b/cultabout.html
@@ -16,6 +16,26 @@
     <script src="bootstrap/popper.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" />
+
+    <style>
+        @media (max-width:768px) {
+            body:before {
+                content: "";
+                display: block;
+                position: fixed;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -10;
+                background: url('assets/bg.jpg') no-repeat center center;
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+            }
+        }
+    </style>
 </head>
 
 <body class="bg-image">
@@ -46,6 +66,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sponsor.html"> Sponsor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html"> Contact</a>
                     </li>
                 </ul>
             </div>
