--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <link rel="preload" href="assets/Ocean Rush DEMO.otf" as="font">
+  <link rel="preload" href="assets/bg.webp" as="image">
+  <link rel="preload" href="assets/qbeta.png" as="image/png">
   <link rel="preload" href="bootstrap/bootstrap.min.css" as="style">
   <link rel="preload" href="bootstrap/bootstrap.min.js" as="script">
   <link rel="preload" href="bootstrap/jquery-3.3.1.slim.min.js" as="script">
