final update of quimica website

--- a/cultabout.html
+++ b/cultabout.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <title>Welcome to Quimica 5.0</title>
+    <meta name="description" content="Quimica is the annual techno-cultural fest of Chemical engineering department, IGIT, Sarang.">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+  
     <meta property="og:title" content="Quimica 5.0" />
     <meta property="og:description" content=" Annual Tech-Cult Fest of Dept. of Chemical Engineering, IGIT Sarang" />
     <meta property="og:site_name" content="Quimica 5.0" />
@@ -68,7 +72,7 @@
                         <a class="nav-link" href="sponsor.html"> Sponsor</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html"> Contact</a>
+                        <a class="nav-link" href="contact.html"> Contact us</a>
                     </li>
                 </ul>
             </div>
