--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+  <title>Welcome to Quimica 5.0</title>
+  <meta name="description"
+    content="Quimica is the annual techno-cultural fest of Chemical engineering department, IGIT, Sarang.">
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="preload" href="assets/Ocean Rush DEMO.otf" as="font">
   <link rel="preload" href="assets/bg.webp" as="image">
   <link rel="preload" href="assets/qbeta.png" as="image/png">
@@ -16,7 +20,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://igitquimica.in" />
   <meta property="og:image" content="https://igitquimica.in/assets/qbeta.png" />
- <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
@@ -46,7 +50,28 @@
   <link rel="preload" href="assets/fv3.jpeg" as="image">
   <link rel="preload" href="assets/fv4.jpeg" as="image/png">
   <link rel="preload" href="assets/fv5.jpeg" as="image">
-
+  <link rel="preload" href="assets/ajay.jpg" as="image/png">
+  <link rel="preload" href="assets/arya.jpg" as="image">
+  <link rel="preload" href="assets/bp.jpg" as="image">
+  <link rel="preload" href="assets/biji.jpg" as="image/png">
+  <link rel="preload" href="assets/dd.jpg" as="image">
+  <link rel="preload" href="assets/jjs.jpg" as="image">
+  <link rel="preload" href="assets/khy.jpg" as="image">
+  <link rel="preload" href="assets/km.jpg" as="image">
+  <link rel="preload" href="assets/nisha.jpg" as="image/png">
+  <link rel="preload" href="assets/pd.jpg" as="image">
+  <link rel="preload" href="assets/pp.jpg" as="image">
+  <link rel="preload" href="assets/priy.jpg" as="image">
+  <link rel="preload" href="assets/rps.jpg" as="image">
+  <link rel="preload" href="assets/sid.jpg" as="image">
+  <link rel="preload" href="assets/sah.jpg" as="image/png">
+  <link rel="preload" href="assets/sal.jpg" as="image">
+  <link rel="preload" href="assets/sar.jpg" as="image">
+  <link rel="preload" href="assets/bink.jpg" as="image">
+  <link rel="preload" href="assets/sks.jpeg" as="image">
+  <link rel="preload" href="assets/raz.jpg" as="image/png">
+  <link rel="preload" href="assets/ad.jpg" as="image">
+  <link rel="preload" href="assets/rks.jpg" as="image">
 
 </head>
 
@@ -54,7 +79,7 @@
   <div class="bg-image">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/qbeta.png" alt="" style="margin:auto; width:100px"> 
+        <img src="assets/qbeta.png" alt="" style="margin:auto; width:100px">
 
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -78,27 +103,28 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sponsor.html"> Sponsor</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html"> Contact</a>
-      </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html"> Contact us</a>
+          </li>
         </ul>
       </div>
     </nav>
     <div class="container-fluid">
       <div class="banner-content">
         <h1 class="bn-intro">
-              WELCOME  <span>--</span> TO
+          WELCOME <span>--</span> TO
         </h1>
-        <img src="assets/qbeta.png" alt="" class="banner-image"> 
+        <img src="assets/qbeta.png" alt="" class="banner-image">
       </div>
     </div>
 
     <div class="fixed-bottom">
-       <a href="https://sambitsahoo2.cf">
+      <a href="https://sambitsahoo2.cf">
         <p style="color: white; letter-spacing: 2px; font-size: 12px;">
           Designed by Sambit Sahoo
-        </p></a>
+        </p>
+      </a>
     </div>
   </div>
 </body>
