contact page upload

--- a/contact.html
+++ b/contact.html
@@ -215,6 +215,25 @@
           </div>
         </div>
       </div>
+      <br>
+      <br>
+      <div class="row" >
+        <div class="col-sm text-left">
+          <h3>We are here !</h3>
+          <br>
+          <h4>Indira gandhi institute of Technology, Sarang</h4>
+          <h4> Dhenkanal, Odisha, 759146</h4>
+          <br>
+          <br>
+        </div>
+        <div class="col-sm text-left">
+          <h3>Connect with us !</h3>
+          <br>
+        <h4 style="font-family: monospace;"><a href="mailto:igitquimica@gmail.com" style="color: white !important;"><b>igitquimica@gmail.com</b></a></h4>
+        <h4 style="font-family:monospace; "><a href="https://instagram.com/quimica5.0" style="color: white !important;"><img src="assets/insta.png" style="height: 30px;" alt=""><b>/quimica5.0</b></a> </h4>
+        </div>
+        
+      </div>
     </div>
     <br />
     <br />
