--- a/index.html
+++ b/index.html
@@ -5,6 +5,212 @@
   <title>Welcome to Quimica 5.0</title>
   <meta name="description"
     content="Quimica is the annual techno-cultural fest of Chemical engineering department, IGIT, Sarang.">
+    <meta name="keywords" content="quimica meaning
+    quimica sintetica,
+    quimica nova,
+    quimica sinte,tica sa
+    quimica suiza,
+    quimica 3d,
+    quimica amp,aro
+    quimica alem,ana
+    quimica fina ,s.a
+    quimica ankles,hwar
+    quimica analiti,ca
+    quimica ambienta,l
+    quimica apollo,
+    quimica aplicad,a
+    a quimica do amo,,r
+    a quimica dos bolo,s
+    a quimica do amor f,ilme
+    a quimica verde perm,ite
+    a quimica stephenie m,eyer
+    a quimica dos alimento,s
+    a quimica no cotidiano,
+    a quimica de deus,
+    a quimica da vida,
+    a quimica organica, estuda
+    quimica basica,
+    quimica biologi,ca
+    quimica basica p,df
+    quimica brown,
+    quimica boss,
+    quimica biel,
+    quimica bacha,relado
+    quimica blante,x
+    quimica bioorga,nica
+    quimica basica d,i risio pdf
+    quimica b ing unl,p
+    quimica b fiuba,
+    quimica b unlp,
+    b&t quimica,
+    familia b qu,imica
+    zyklon b quim,ica
+    complejo b qui,mica suiza
+    vitamina b quim,ica
+    h b quimica,
+    b em quimica,
+    quimica clini,ca aplicada s.a. (qca)
+    quimica cristi,ana
+    quimica chang,
+    quimica cuanti,ca
+    quimica cosmeti,ca
+    quimica clinica,
+    quimica cinetica,
+    quimica computaci,onal
+    quimica chang 12 e,dicion pdf
+    c quimica fortaleza,
+    quimica c=m/v,
+    quimica c.n,
+    quimica c&g,
+    quimica c=o,
+    quimica c vi,rtual
+    vitamina c qu,imica
+    c-h quimica,
+    chapa c quim,ica perfecta descargar
+    c.e quimica
+    quimica defin,icion
+    quimica dibujo,s
+    quimica del amo,r
+    quimica delta,
+    quimica de los, alimentos
+    quimica do amor,
+    quimica del carb,ono
+    quimica de alimen,tos
+    quimica de chang,
+    quimica d & c,
+    quimica d=m/v,
+    quimica d elos, alimentos
+    quimica d y l,
+    quimica d agua, ijui
+    la quimica de l,a vida
+    quimica d boa,
+    vitamina d qui,mica
+    imagenes de quimica
+    definicion de q,uimica
+    quimica en ingle,s
+    quimica em ingles,
+    quimica enem,
+    quimica engli,sh
+    quimica en ali,mentos
+    quimica en el a,mor
+    quimica em ação,
+    quimica en la vi,da cotidiana
+    quimica en la eda,d media
+    quimica ensino med,io
+    e quimica fisica,
+    quimica e meio am,biente
+    quimica e derivado,s
+    quimica e sociedade,
+    quimica e fisica 9 a,no
+    quimica e vestibular,
+    quimica e cia,
+    quimica e o meio ambiente
+    quimica e tecn,ologia
+    quimica e saude,
+    quimica farmaceu,tica
+    quimica forense,
+    quimica fisica,
+    quimica fina,
+    quimica farru,ko
+    quimica formul,as
+    quimica frases,
+    química feltre,
+    quimica fenix
+    f quimica unam,
+    f.quimica 9 ano,
+    teste f quimica ,analitica
+    uniao quimica f n,
+    f-1 quimica,
+    orbitales f ,quimica
+    f formula qui,mica
+    simbolo f quim,ica
+    mg + f quimica,
+    quimica general,
+    quimica geral,
+    quimica genera,l pdf
+    quimica general, petrucci
+    quimica geral pd,f
+    quimica goncal,
+    quimica general, chang
+    quimica general ,1
+    quimica general u,sac
+    quimica general li,bros
+    g quimica fortaleza,
+    g quimica definicion,
+    quimica g william,
+    quimica g/eq,
+    delta g quimi,ca
+    g&m quimica
+    g/l quimica,
+    wiso g quimi,ca
+    a.g. quimica ,,s.a. de c.v
+    quimica halac,
+    quimica hibrid,acion
+    quimica humana,
+    quimica heteroc,iclica
+    quimica historia,
+    quimica hurlingha,m
+    quimica hewstone,
+    quimica hidrocarb,onetos
+    quimica horganica,
+    quimica hidrocarbu,ros
+    h+ quimica signific,ado
+    h quimica maringa,
+    h+ quimica ph,
+    h+ quimica nom,e
+    h quimica herva,l
+    h quimica valenc,ia
+    h+ química o que ,é
+    delta h quimica,
+    h-oh quimica,
+    quimica inorg,anica
+    quimica indust,rial
+    química in engl,ish
+    quimica inorgani,ca pdf
+    quimica industria,l bahiense
+    quimica ingles,
+    quimica organic,a nomenclatura
+    quimica imagenes,
+    quimica industria,l unam
+    quimica instrument,al
+    i quimica elemento,
+    i quimica tabla per,iodica
+    i quimica pro,
+    i quimica vale,ncia
+    i quimica fisic,a
+    i quimica inorga,nica
+    quimica i bachill,erato
+    quimica i prou,
+    quimica i pdf,
+    quimica i dgb,
+    quimica juanch,o marques
+    quimica juancho,
+    quimica juancho ,letra
+    quimica jerez,
+    quimica jw,
+    quimica jac,kson
+    quimica juan,cho marques acordes
+    quimica joao ,bosco e vinicius
+    quimica joao b,osco
+    quimica jvc,
+    quimica j mo,ntes
+    j/k quimica,
+    j thomson qu,imica
+    j de lee quim,ica inorganica pdf
+    j dias industr,ia quimica
+    j d lee quimica, inorganica
+    j arrhenius quim,ica
+    j&f quimica indus,trial
+    quimica j.t,
+    j berzelius ,quimica
+    quimica kubo,
+    quimica kc,
+    quimica kha,n academy
+    quimica kps,
+    quimica kubo, mar del plata
+    quimica karen, c. timberlake pdf
+    quimica kraff,
+ ">
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="preload" href="assets/Ocean Rush DEMO.otf" as="font">
   <link rel="preload" href="assets/bg.webp" as="image">
