--- a/team.html
+++ b/team.html
@@ -5,28 +5,6 @@
     <title>Welcome to Quimica 5.0</title>
     <meta name="description" content="Quimica is the annual techno-cultural fest of Chemical engineering department, IGIT, Sarang.">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="preload" href="assets/ajay.jpg" as="image/png">
-    <link rel="preload" href="assets/arya.jpg" as="image">
-    <link rel="preload" href="assets/bp.jpg" as="image">
-    <link rel="preload" href="assets/biji.jpg" as="image/png">
-    <link rel="preload" href="assets/dd.jpg" as="image">
-    <link rel="preload" href="assets/jjs.jpg" as="image">
-    <link rel="preload" href="assets/khy.jpg" as="image">
-    <link rel="preload" href="assets/km.jpg" as="image">
-    <link rel="preload" href="assets/nisha.jpg" as="image/png">
-    <link rel="preload" href="assets/pd.jpg" as="image">
-    <link rel="preload" href="assets/pp.jpg" as="image">
-    <link rel="preload" href="assets/priy.jpg" as="image">
-    <link rel="preload" href="assets/rps.jpg" as="image">
-    <link rel="preload" href="assets/sid.jpg" as="image">
-    <link rel="preload" href="assets/sah.jpg" as="image/png">
-    <link rel="preload" href="assets/sal.jpg" as="image">
-    <link rel="preload" href="assets/sar.jpg" as="image">
-    <link rel="preload" href="assets/bink.jpg" as="image">
-    <link rel="preload" href="assets/sks.jpeg" as="image">
-    <link rel="preload" href="assets/raz.jpg" as="image/png">
-    <link rel="preload" href="assets/ad.jpg" as="image">
-    <link rel="preload" href="assets/rks.jpg" as="image">
     <meta property="og:title" content="Quimica 5.0" />
     <meta property="og:description" content=" Annual Tech-Cult Fest of Dept. of Chemical Engineering, IGIT Sarang" />
     <meta property="og:site_name" content="Quimica 5.0" />
@@ -460,7 +438,18 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                   
+                    <div class="card c-card" style="width:100%">
+                        <br>
+                        <img src="assets/samb.jpg"
+                            class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">sambeet nayak</h5>
+                            <p class="card-text text-center">
+                                Fooding Coordinator <a href="tel:7537874665"><i style="font-size: 20px;">&#9742;</i></a>
+                            </p> 
+
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm">
                    
