--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
           WELCOME <span>--</span> TO
         </h1>
         <img src="assets/qbeta.png" alt="" class="banner-image">
+        <h1>28<sup>th</sup> Feb <small>to</small> 1<sup>st</sup> March</h1>
       </div>
     </div>
 
