--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           WELCOME <span>--</span> TO
         </h1>
         <img src="assets/qbeta.png" alt="" class="banner-image">
-        <h1>28<sup>th</sup> Feb <small>to</small> 1<sup>st</sup> March</h1>
+        <h2>28<sup>th</sup> Feb- <small style="font-size:13px;">to </small>- 1<sup>st</sup> March</h2>
       </div>
     </div>
 
