--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           WELCOME <span>--</span> TO
         </h1>
         <img src="assets/qbeta.png" alt="" class="banner-image">
-        <h4 class="bn-intro">28<sup>th</sup> Feb- <small style="font-size:13px;">to </small>- 1<sup>st</sup> March</h4>
+        <h4 class="bn-intro2">28<sup>th</sup> Feb- <small style="font-size:13px;">to </small>- 1<sup>st</sup> March</h4>
       </div>
     </div>
 
