--- a/rules.html
+++ b/rules.html
@@ -65,7 +65,7 @@
         </h1>
         <br>
         <br> 
-        <div class="container-fluid text-left " style="color: white;">
+        <div class="container text-left " style="color: white;">
             <div id="gen">
                 <h3 class="text-center">General Rules</h3>
                 <ul class="rule-ul">
