--- a/team.html
+++ b/team.html
@@ -452,7 +452,17 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                   
+                         <br>
+                        <img src="assets/samb.jpg"
+                            class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Anil K sethi</h5>
+                            <p class="card-text text-center">
+                                Chief media <a href="tel:7537874665"><i style="font-size: 20px;">&#9742;</i></a>
+                            </p> 
+
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm">
                    
