--- a/team.html
+++ b/team.html
@@ -452,13 +452,14 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                         <br>
+                      <div class="card c-card" style="width:100%">
+                        <br>
                         <img src="assets/samb.jpg"
                             class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Anil K sethi</h5>
+                            <h5 class="card-title text-center">sambeet nayak</h5>
                             <p class="card-text text-center">
-                                Chief media <a href="tel:8249553154"><i style="font-size: 20px;">&#9742;</i></a>
+                                Fooding Coordinator <a href="tel:7537874665"><i style="font-size: 20px;">&#9742;</i></a>
                             </p> 
 
                         </div>
