--- a/team.html
+++ b/team.html
@@ -457,9 +457,9 @@
                         <img src="assets/"
                             class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-center">sambeet nayak</h5>
+                            <h5 class="card-title text-center">Anil k Sethi</h5>
                             <p class="card-text text-center">
-                                Fooding Coordinator <a href="tel:7537874665"><i style="font-size: 20px;">&#9742;</i></a>
+                                Fooding Coordinator <a href="tel:8249553154"><i style="font-size: 20px;">&#9742;</i></a>
                             </p> 
 
                         </div>
