--- a/team.html
+++ b/team.html
@@ -459,7 +459,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-center">Anil k Sethi</h5>
                             <p class="card-text text-center">
-                                Fooding Coordinator <a href="tel:8249553154"><i style="font-size: 20px;">&#9742;</i></a>
+                                Cheif Media <a href="tel:8249553154"><i style="font-size: 20px;">&#9742;</i></a>
                             </p> 
 
                         </div>
