--- a/team.html
+++ b/team.html
@@ -454,7 +454,7 @@
                 <div class="col-sm">
                       <div class="card c-card" style="width:100%">
                         <br>
-                        <img src="assets/"
+                        <img src="assets/anil.jpeg"
                             class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-center">Anil k Sethi</h5>
