--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-center">K. Mohan Rao</h5>
                             <p class="card-text text-center">
-                                Managerial Admin <a href="tel:7978610257"><i style="font-size: 20px;">&#9742;</i></a>0
+                                Managerial Admin <a href="tel:7978610257"><i style="font-size: 20px;">&#9742;</i></a>
                             </p>
 
                         </div>
