--- a/events.html
+++ b/events.html
@@ -305,7 +305,7 @@
                                 <br>
                                 jiban j sahoo --<a href="tel:9556177049"><i style="font-size: 20px;">&#9742;</i></a>
                             </p>
-                            <a href="rules.html#man" style="font-family: monospace;"><button class="btn btn-primary px-2 ">
+                            <a href="cultabout.html#man" style="font-family: monospace;"><button class="btn btn-primary px-2 ">
                                     RULES & MORE
                                 </button> </a>
 
