--- a/funabout.html
+++ b/funabout.html
@@ -190,33 +190,28 @@
                  </div>
                 <ul class="rule-ul">
                     <li><b><h5> <u>Rules and Regulations: </u></h5></b></li>
-                    <li>1.	There will be a team of 3 members each.</li>
+                    <li>	There will be a team of 3 members each.</li>
                     <li>
-                        2.	There will be a dish plate containing any one of the chemicals.
+                        	There will be a dish plate containing any one of the chemicals.
                     </li>
                     <li>One of the team members will have to smell the item and need to answer it to the organizer and to the teammate.
                     </li>
                     <li>
-                        4.	The 2nd member has to speak about the chemical compounds correctly. 
+                        	The 2nd member has to speak about the chemical compounds correctly. 
                     </li>
                     <li>
-                        5.	Then, the 3rd member will have to hit the dart of that particular chemicals to the spin wheel containing the names of the chemicals.
+                        	Then, the 3rd member will have to hit the dart of that particular chemicals to the spin wheel containing the names of the chemicals.
 
                     </li>
                     <li>
-                        6.	The team which clears all the rounds will be declared as winner.
+                        	The team which clears all the rounds will be declared as winner.
                     </li>
 
                     <li>
                         The participant must show their ideas beforehand.
 
                     </li>
-                    <li>
-                        <b>Prizes: -</b>
-                        1st, 2nd and 3rd rank holding teams will be awarded with cash prizes and certificates.
-
-                    </li>
-
+                 
 
                 </ul>
             </div>
@@ -251,7 +246,7 @@
                         	The balloon should not touch the ground and burst too.
                     </li>
                     <li>
-                        	The balloons collected in the empty box will be collected by 2nd member through hands and need to burst it with the help of its ass only.
+                        	The balloons collected in the empty box will be collected by 2nd member through hands and need to burst it with the help of its bum only.
                     </li>
                     <li>
                         	The team needs to complete the whole activity in 3 mins only.
