--- a/cultabout.html
+++ b/cultabout.html
@@ -173,7 +173,7 @@
                 </p>
             </div>
             <div id="man">
-                <h3 class="text-center"> MANNEQUIN</h3>
+              <h3 class="text-center"> <u>MANNEQUIN</u></h3>
                 <div>
                     
                     <h4 style="font-family:monospace"> <b><u>About:-</u></b><br>Walking tall and gracefully is just like you are living your life on a ramp. 
