--- a/team.html
+++ b/team.html
@@ -140,7 +140,7 @@
                         <img src="assets/dd.jpg"
                             class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Deepti Dalei</h5>
+                            <h5 class="card-title text-center">Deeptimayee Dalei</h5>
                             <p class="card-text text-center">
                                 Co-Exec. Admin <a href="tel:6371401957"><i style="font-size: 20px;">&#9742;</i></a>
                             </p> 
