--- a/team.html
+++ b/team.html
@@ -356,7 +356,7 @@
                         <img src="assets/arya.jpg"
                             class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Arya</h5>
+                            <h5 class="card-title text-center">Arya Anindya</h5>
                             <p class="card-text text-center">
                                 Hospitality Head <a href="tel:8895497417"><i style="font-size: 20px;">&#9742;</i></a>
                             </p> 
