--- a/events.html
+++ b/events.html
@@ -316,7 +316,7 @@
                     <div class="card c-card2" style="width:100%">
                         <img src="assets/cv7.png" class="card-img-top " style="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-center">L-'DIABLOS</h5>
+                            <h5 class="card-title text-center">El - Diablos</h5>
                             <p class="card-text text-center">
                                 pragyan panda -- <a href="tel:9078734672"> <i style="font-size: 20px;">&#9742;</i></a>
                                 <br>
