--- a/register.html
+++ b/register.html
@@ -23,7 +23,8 @@
     <script src="bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <style>
-      
+      .freebirdFormviewerViewItemsSectionheaderTitle{
+        font-weight:700 !important;
     </style>
 </head>
 
