--- a/team.html
+++ b/team.html
@@ -69,9 +69,9 @@
                         <img src="assets/bink.jpg"
                             class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Binayak P. Singh</h5>
+                            <h5 class="card-title text-center">Archit Mohanty</h5>
                             <p class="card-text text-center">
-                                Chief-Coordinator <a href="tel:9938821954"><i style="font-size: 20px;">&#9742;</i></a>
+                                Chief-Coordinator <a href="tel:7656047203"><i style="font-size: 20px;">&#9742;</i></a>
                             </p>
                         </div>
                     </div>
