--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
                 <div class="col-sm">
                     <div class="card c-card" style="width:100%">
                         <br>
-                        <img src="assets/bink.jpg"
+                        <img src="assets/AM.jpg"
                             class="card-img-top rounded-circle  mx-auto my-auto " style="width:200px; border:2px solid white;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-center">Archit Mohanty</h5>
